--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!--don't use center ever this is a desperate time-->
       <center>
       <p>
-      You are cordially invited to the Ceremony of Bonding for</p>
+      You are cordially invited to the Ceremony of Eternal Bonding for</p>
       <h1 class="fancy">Kageyama Tobiko & Hinata Shouyou</h1>
         on August 7, 2016 at 7pm EST<br />
         at the Sanctum of the Twelve, East Shroud.
